# bachelor_thesis

./: .gitignore  .gitmodules  README.md
code/: CMakeLists.txt  Makefile  README.md  TODO.md
code/assets/maps/: World_map_nations.svg.license  paleblue.jpg.license
code/gfx/: CMakeLists.txt  Makefile  notes.txt  vessel_tracker.cpp
code/gfx/assets/maps/: Mercator_Projection.svg.license  World-map.svg.license
code/gfx/gui/: CMakeLists.txt
code/gfx/shapes/: CMakeLists.txt  ellipsoid.h  map.c  map.h  shapes.c  shapes.h
code/gfx/test/: CMakeLists.txt  test.c  test.h
code/gfx/translation/: CMakeLists.txt  translation.c  translation.h
code/sdl/: CMakeLists.txt  Makefile  shapes.c  shapes.h  vessel_tracker.cpp
code/sdl/gui/: CMakeLists.txt
code/src/: CMakeLists.txt
code/src/c/: draw.c  draw.h  ellipsoid.h  map.c  map.h  vessel.c  vessel.h  vincenty.c  vincenty.h
code/src/cpp/: vessel_tracker.cpp
code/tests/: CMakeLists.txt  test_all.cpp  test_map.cpp  test_vessel.cpp
code/tests/bench/: CMakeLists.txt  bench_all.cpp
code/tests/unit/: CMakeLists.txt  test_map.cpp  test_vessel.cpp  test_vincenty.cpp
presentation/: README.md
sdl/: CMakeLists.txt  Makefile
thesis/: README.md
